# vector

./: .gitignore
vector_common/si_utils/scripts/: install_ds4_dep  laserscan_to_pcl2  sync_laserscan_and_map  sync_laserscan_and_odom  web_topics
vector_common/vector_config/: vector_config.bash
vector_common/vector_description/meshes/vector_components/collision/: dev_payload_plate_collision.stl  std_payload_plate_collision.stl  vector_bw_base_collision.stl  vector_vlp16_mount_collision.stl
vector_common/vector_description/meshes/vector_components/visual/: dev_payload_plate.dae  std_payload_plate.dae  vector_vlp16_mount.dae
vector_common/vector_description/urdf/: accessories.urdf.xacro  vector.urdf.xacro
vector_common/vector_description/urdf/sensors/: d415.urdf.xacro  hokuyo_uam_05lp.urdf.xacro  sick_tim.urdf.xacro  velodyne_vlp16.urdf.xacro  webcam.urdf.xacro
vector_common/vector_description/urdf/vector_components/: vector_base.urdf.xacro  vector_vlp16_mount.urdf.xacro
vector_common/vector_msgs/msg/: Configuration.msg
vector_common/vector_navigation/vector_assisted_teleop/include/vector_assisted_teleop/: vector_assisted_teleop.h
vector_common/vector_navigation/vector_assisted_teleop/src/: vector_assisted_teleop.cpp
vector_common/vector_navigation/vector_navigation_apps/config/common/: costmap_common_params.yaml
vector_common/vector_plugins/custom_recovery_behavior/: CMakeLists.txt  LICENSE  custom_recovery_plugin.xml  package.xml
vector_common/vector_plugins/custom_recovery_behavior/include/custom_recovery/: custom_recovery.h
vector_common/vector_plugins/custom_recovery_behavior/src/: custom_recovery.cpp
vector_common/vector_ros/cfg/: vector.cfg
vector_common/vector_ros/launch/: vector_teleop.launch
vector_common/vector_ros/src/vector/: move_base.py  system_defines.py  utils.py  vector_comm.py  vector_data_classes.py  vector_teleop.py
vector_common/vector_third_party/ds4drv/: .gitignore  CMakeLists.txt  ds4drv.conf  package.xml  setup.py
vector_common/vector_third_party/ds4drv/launch/: ds4drv.launch
vector_common/vector_third_party/ds4drv/src/ds4drv/: __main__.old  config.py  device.py  ds4drv.py  ds4drv_node.py
vector_common/vector_third_party/ds4drv/src/ds4drv/actions/: btsignal.py
vector_common/vector_third_party/ds4drv/src/ds4drv/backends/: hidraw.py
vector_common/vector_third_party/ds4drv_msgs/: CMakeLists.txt  package.xml
vector_common/vector_third_party/ds4drv_msgs/msg/: DS4_ConnectionStatus.msg  DS4_Indication.msg  DS4_SignalStatus.msg
vector_demos/: CMakeLists.txt  package.xml
vector_demos/config/assisted_teleop/: base_planner_params.yaml  costmap_common_params.yaml
vector_demos/config/nav/: amcl.yaml  global_planner_params.yaml  move_base_params.yaml
vector_demos/config/nav/cartographer/: vector.lua  vector_hi_res.lua
vector_demos/config/nav/dwa/: costmap_common_params.yaml  local_planner_params.yaml  sim_costmap_common_params.yaml
vector_demos/launch/nav/: assisted_teleop.launch  cartographer_mapping.launch  map_nav.launch  mapping.launch  move_base.launch  sensor_nav.launch
vector_demos/launch/robot/: robot_assisted_teleop.launch  robot_map_nav.launch  robot_mapping.launch  robot_sensor_nav.launch  robot_teleop.launch
vector_demos/launch/sim/: sim_assisted_teleop.launch  sim_basic_teleop.xml  sim_map_nav.launch  sim_mapping.launch  sim_sensor_nav.launch  sim_teleop.launch  sim_warehouse_teleop.launch
vector_desktop/vector_viz/rviz/: model.rviz  robot_assisted_teleop.rviz  robot_map_nav.rviz  robot_mapping.rviz  robot_sensor_nav.rviz  robot_teleop.rviz
vector_network/: package.xml  vector_network_config.bash
vector_robot/mecanum_effort/: CMakeLists.txt  package.xml
vector_robot/mecanum_effort/src/: mecanum_effort_node.cpp
vector_robot/vector_bringup/launch/: bag_play.launch  vector_system.launch
vector_robot/vector_bringup/launch/platform/: vector.launch
vector_robot/vector_bringup/launch/platform/config/: vector_params.yaml  vector_params_HD.yaml
vector_robot/vector_bringup/launch/sensors/: vector_sensors.launch
vector_robot/vector_bringup/launch/teleop/: vector_teleop.launch
vector_robot/vector_sensor_filters/floor_removal/: CMakeLists.txt  package.xml
vector_robot/vector_sensor_filters/floor_removal/launch/: realsense_sac.launch  sac.launch
vector_robot/vector_sensor_filters/velodyne_height_map/src/: heightmap.cpp
vector_robot/vector_upstart/: package.xml
vector_robot/vector_upstart/templates/: job.conf.em
vector_simulator/vector_gazebo/launch/: spawn_controllers.launch  vector.launch  vector_full_sim.launch  vector_high.launch  vector_test_zone.launch  vector_warehouse.launch
vector_simulator/vector_gazebo/models/bench/: model.config
vector_simulator/vector_gazebo/models/cafe_beer/: model.config
vector_simulator/vector_gazebo/models/pringles/: model.config
vector_simulator/vector_gazebo/worlds/: small_warehouse.world
vector_simulator/vector_gazebo_plugins/force_based_move_gazebo_plugin/: CMakeLists.txt  package.xml
vector_simulator/vector_gazebo_plugins/force_based_move_gazebo_plugin/src/: gazebo_ros_force_based_move.cpp
vector_simulator/vector_gazebo_plugins/vector_gazebo_plugins/: CMakeLists.txt  package.xml
vector_simulator/vector_simulator/: CMakeLists.txt  package.xml
(+5 files in other folders)
