<?xml version="1.0"?>
<package>
    <name>vector_demos</name>
    <version>1.0.0</version>
    <description>Demos for vector</description>
    <maintainer email="dev@waypointrobotics.com">Patrick Hussey</maintainer>
    <author></author>
    <url type="repository">https://github.com/WaypointRobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roslaunch</build_depend>

    <export>
    </export>
</package>
