<?xml version="1.0"?>
<package format="2">
  <name>mecanum_effort</name>
  <version>0.0.0</version>
  <description>A Node that publishes a wrench based on motor currents</description>

  <maintainer email="nickv@waypointrobotics.com">Nick Varas</maintainer>
  <license>NONE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vector_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>vector_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
    
  
</package>
