<?xml version="1.0"?>
<package>
    <name>ds4drv</name>
    <version>0.0.1</version>
    <description>Drivers and nodes related to Stanley Innovation Vector</description>
    
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/stanley_innovation</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>ds4drv_msgs</run_depend>
    
	<export>
	</export>
</package>
